completed validation in both payload and mongodb using joi
