# src/utils/swagger-output-admin.json
@@ -1,3 +1,123 @@
 {
-    
+  "swagger": "2.0",
+  "info": {
+    "version": "1.0.0",
+    "title": "TELL API Documentation",
+    "description": "Technology Enabled Learning Language"
+  },
+  "host": "localhost:3000",
+  "basePath": "/api/v1/admin",
+  "schemes": [
+    "http",
+    "https"
+  ],
+  "securityDefinitions": {
+    "apiKeyAuth": {
+      "type": "apiKey",
+      "in": "header",
+      "name": "x-auth-token",
+      "description": "Authentication token"
+    }
+  },
+  "paths": {
+    "/singleQA": {
+      "post": {
+        "tags": [
+          "Admin"
+        ],
+        "summary": "upload single question and answer",
+        "description": "Add Desc Here",
+        "consumes": [
+          "application/json"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "description": "Admin Req.Body Data",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "question": {
+                  "type": "string",
+                  "example": "Let me explain how this treatment works"
+                },
+                "answer": {
+                  "type": "string",
+                  "example": "Please go ahead and explain how the treatment works In did like to know more"
+                },
+                "department": {
+                  "type": "string",
+                  "example": "All"
+                },
+                "createdBy": {
+                  "type": "string",
+                  "example": "Palani S"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "New Question Added to the Database."
+          },
+          "400": {
+            "description": "Bad Request."
+          },
+          "401": {
+            "description": "Invalid Token or Unauthorized Access to the user."
+          },
+          "500": {
+            "description": "Server Error."
+          }
+        }
+      }
+    },
+    "/getAllQA": {
+      "get": {
+        "tags": [
+          "User & Admin"
+        ],
+        "summary": "get all questions and answers",
+        "description": "Add Desc Here",
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "index",
+            "in": "query",
+            "description": "The index of the question is retrieve.",
+            "schema": {
+              "type": "integer"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Questions & Answers Retrieved Successfully."
+          },
+          "400": {
+            "description": "Bad Request."
+          },
+          "401": {
+            "description": "Unauthorized Access to the user."
+          },
+          "500": {
+            "description": "Server Error."
+          }
+        }
+      }
+    }
+  },
+  "security": [
+    {
+      "apiKeyAuth": []
+    }
+  ]
 }
